<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="234dp"
        android:layout_height="47dp"
        android:layout_marginTop="100dp"
        android:clickable="false"
        android:longClickable="false"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/eraseButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="#4A148C"
        android:longClickable="true"
        android:onClick="clearLastCharacter"
        android:text="@string/delete_number"
        app:layout_constraintBottom_toBottomOf="@+id/phoneNumber"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintStart_toEndOf="@+id/phoneNumber"
        app:layout_constraintTop_toTopOf="@+id/phoneNumber" />

    <TableRow
        android:id="@+id/savedNumbers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
        app:layout_constraintVertical_bias="0.377">

        <Button
            android:id="@+id/saved1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#4A148C"
            android:text="@string/contact1"
            android:onClick="addSavedNumberToView"
            app:iconTint="#4A148C" />

        <Button
            android:id="@+id/saved2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#4A148C"
            android:text="@string/contact2"
            android:onClick="addSavedNumberToView"
            app:iconTint="#4A148C" />

        <Button
            android:id="@+id/saved3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#4A148C"
            android:text="@string/contact3"
            android:onClick="addSavedNumberToView"
            app:iconTint="#4A148C" />
    </TableRow>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="76dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#B388FF"
                android:onClick="addNumberToView"
                android:text="1"
                app:iconTint="#6A1B9A"
                app:strokeColor="#9575CD" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#B388FF"
                android:onClick="addNumberToView"
                android:text="2"
                app:iconTint="#6A1B9A"
                app:strokeColor="#9575CD" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#B388FF"
                android:onClick="addNumberToView"
                android:text="3"
                app:iconTint="#6A1B9A"
                app:strokeColor="#9575CD" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#B388FF"
                android:onClick="addNumberToView"
                android:text="4"
                app:iconTint="#6A1B9A"
                app:strokeColor="#9575CD" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#B388FF"
                android:onClick="addNumberToView"
                android:text="5" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#B388FF"
                android:onClick="addNumberToView"
                android:text="6" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#B388FF"
                android:onClick="addNumberToView"
                android:text="7"
                app:iconTint="#6A1B9A"
                app:strokeColor="#9575CD" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#B388FF"
                android:onClick="addNumberToView"
                android:text="8"
                app:iconTint="#6A1B9A"
                app:strokeColor="#9575CD" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#B388FF"
                android:onClick="addNumberToView"
                android:text="9"
                app:iconTint="#6A1B9A"
                app:strokeColor="#9575CD" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/buttonAst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#B388FF"
                android:onClick="addNumberToView"
                android:text="*"
                app:iconTint="#6A1B9A"
                app:strokeColor="#9575CD" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#B388FF"
                android:onClick="addNumberToView"
                android:text="0"
                app:iconTint="#6A1B9A"
                app:strokeColor="#9575CD" />

            <Button
                android:id="@+id/buttonCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#B388FF"
                android:onClick="addNumberToView"
                android:text="#"
                app:iconTint="#6A1B9A"
                app:strokeColor="#9575CD" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#4A148C"
                android:text="@string/call"
                android:onClick="openCall"

                app:iconTint="#4A148C" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>